# agentCastle

./: package-lock.json  recovery-known-open-files.txt
agentCastle/: index.html  package-lock.json  package.json
agentCastle/src/: App.css  App.tsx  index.css
agentCastle/src-tauri/: Cargo.toml  tauri.conf.json
agentCastle/src-tauri/src/: lib.rs  main.rs
agentCastle/src/components/ui/: accordion.tsx  alert.tsx  badge.tsx  card.tsx
agentCastle/src/config/: agents.config.ts  theme.config.ts
agentCastle/src/lib/: agents.ts
agentCastle/src/views/Agents/: AgentDetailView.tsx  AgentsView.tsx  CreateAgentDialog.tsx
agentCastle/src/views/Layout/: AppSidebar.tsx  MainLayout.tsx
agentCastle/src/views/Metrics/: MetricsView.tsx
agentCastle/src/views/Settings/: SettingsView.tsx
agentCastle/src/views/providers/: ThemeProvider.tsx
sandcastle/.sandcastle/: Dockerfile
sandcastle/src/: AgentProvider.test.ts  AgentProvider.ts  EnvResolver.ts  Orchestrator.test.ts  Orchestrator.ts  SandboxFactory.ts  SandboxLifecycle.test.ts  SandboxLifecycle.ts  WorktreeManager.test.ts  WorktreeManager.ts  createSandbox.test.ts  run.test.ts  run.ts  syncOut.ts
tauri-app/src/: App.tsx
tauri-app/src-tauri/src/: lib.rs
tauri-app/src/lib/: agents.ts
tauri-app/src/views/Agents/: AgentsView.tsx
tauri-app/src/views/Layout/: AppSidebar.tsx  MainLayout.tsx
tauri-app/src/views/Metrics/: MetricsView.tsx
tauri-app/src/views/Settings/: SettingsView.tsx
